--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "address",
   "version": "1.0.0",
   "main": "index.js",
-  "type" : "module",
+  "type": "module",
   "scripts": {
     "start": "node api/server.js",
     "watch": "node --watch api/server.js"
@@ -12,6 +12,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "dotenv": "^16.4.5",
     "express": "^4.21.0"
   }
 }
