--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "type": "module",
   "scripts": {
     "start": "node api/server.js",
-    "watch": "node --watch api/server.js"
+    "watch": "node --watch api/server.js",
+    "build" : "npm install && npm install --prefix client && npm run build --prefix client"
   },
   "keywords": [],
   "author": "",
